# pytorch-template

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
src/: main.py
src/notebooks/: eda.ipynb
