[tool.poetry]
name = "template_master"
version = "0.1.0"
description = ""
authors = ["Shinya Otani"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.10"
torch = {url = "https://download.pytorch.org/whl/cu113/torch-1.10.0%2Bcu113-cp38-cp38-linux_x86_64.whl"}
scipy = "^1.6"
scikit-learn = "^1.0.1"
matplotlib = "^3.4.3"
pandas = "^1.3.4"
jupyter = "^1.0.0"
tensorboard = "^2.7.0"
pytest = "^6.2.5"
opencv-python = "^4.2"
mlflow = "^1.21.0"

[tool.poetry.dev-dependencies]
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
